@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: http.c,v 1.371 2008-05-19 20:57:28 bagder Exp $
+ * $Id: http.c,v 1.372 2008-06-22 20:38:16 bagder Exp $
  ***************************************************************************/
 
 #include "setup.h"
@@ -2298,7 +2298,7 @@ CURLcode Curl_http(struct connectdata *conn, bool *done)
      * or uploading and we always let customized headers override our internal
      * ones if any such are specified.
      */
-    if((httpreq == HTTPREQ_GET) &&
+    if(((httpreq == HTTPREQ_GET) || (httpreq == HTTPREQ_HEAD)) &&
        !checkheaders(data, "Range:")) {
       /* if a line like this was already allocated, free the previous one */
       if(conn->allocptr.rangeline)
